# HUST-Project-of-Hardware-System

./: .gitignore  README.md
Data-Bypassing/constrs/: Nexys4DDR_Master.xdc
Data-Bypassing/verilog/: cpu.v  data_bypass_pipeline.v  risc-v-benchmark_ccab.hex  riscv_cpu_tb.v
Data-Bypassing/verilog/bridge/: EX2MEM.v  ID2EX.v  MEM2WB.v
Data-Bypassing/verilog/controler/: alu_controler.v  data_forwarding.v  register_used.v  signal_generator.v
Data-Bypassing/verilog/display/: decoder3_8.v  pattern.v
Interrupt-Pipeline/coe/: bare_metal_ram0.coe  bare_metal_ram1.coe  bare_metal_ram2.coe  bare_metal_ram3.coe  bare_metal_rom.coe  hex2coe.py  magic_cube.coe  merge.py  ram.hex  risc-v-benchmark_ccab.coe  rv32i.coe
Interrupt-Pipeline/constrs/: Nexys4DDR_Master.xdc
Interrupt-Pipeline/verilog/: GetScreenColor_tb.v  VgaDivider.v  cpu.v  interrupt_pipeline.v  magic_cube.hex  risc-v-nested_interrupt.hex  riscv_cpu_tb.v  rv32i.asm  rv32i.hex  test.hex  vga_tb.v
Single-Cycle/verilog/: cpu.v  riscv_cpu_tb.v  single_cycle.v
magic_cube/: .gitignore  Cargo.toml  Makefile  convert.py  main.dump  main.hex
magic_cube/bare_metal/: Cargo.toml  build.rs  rust-toolchain.toml
magic_cube/bare_metal/src/: entry.asm  linker.ld  main.rs
magic_cube/bare_metal/src/console/: mod.rs
magic_cube/bare_metal/src/lang_items/: mod.rs
magic_cube/bare_metal/src/trap/: mod.rs  trap.s
magic_cube/bare_metal/src/vga/: mod.rs
magic_cube/emulator/: Cargo.toml
magic_cube/emulator/src/: main.rs
magic_cube/game/: Cargo.toml
magic_cube/src/: game.rs  linker.ld  main.rs
(+115 files in other folders)
