[package]
name = "bare_metal"
version = "0.1.0"
edition = "2021"
authors = ["Luyan Zhou <luyan_zhou@outlook.com>"]


[build-dependencies]
lazy_static = "1.5.0"


[[bin]]
name = "bare_metal"
test = false
doctest = false
bench = false


[dependencies]
riscv = "0.12.1"
game = { path = "../game" }

[features]
disable_ecall = []
