[package]
name = "emulator"
version = "0.1.0"
authors = ["Luyan Zhou <luyan_zhou@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.37.0", features = ["bundled"] }
game = { path = "../game" }